openshift-local-yamls/localstack.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    name: "localstack"
  name: "localstack"
  namespace: "test-project"
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: "localstack"
  strategy:
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        deployment: "localstack"
    spec:
      containers:
        - image: "localstack/localstack:latest"
          imagePullPolicy: "IfNotPresent"
          name: "localstack"
          ports:
            - containerPort: 4551
              protocol: "TCP"
            - containerPort: 4553
              protocol: "TCP"
            - containerPort: 4515
              protocol: "TCP"
            - containerPort: 4537
              protocol: "TCP"
            - containerPort: 4549
              protocol: "TCP"
            - containerPort: 4539
              protocol: "TCP"
            - containerPort: 4552
              protocol: "TCP"
            - containerPort: 4559
              protocol: "TCP"
            - containerPort: 4526
              protocol: "TCP"
            - containerPort: 4528
              protocol: "TCP"
            - containerPort: 4531
              protocol: "TCP"
            - containerPort: 4518
              protocol: "TCP"
            - containerPort: 4524
              protocol: "TCP"
            - containerPort: 4530
              protocol: "TCP"
            - containerPort: 4541
              protocol: "TCP"
            - containerPort: 4542
              protocol: "TCP"
            - containerPort: 4510
              protocol: "TCP"
            - containerPort: 4512
              protocol: "TCP"
            - containerPort: 4516
              protocol: "TCP"
            - containerPort: 4550
              protocol: "TCP"
            - containerPort: 4557
              protocol: "TCP"
            - containerPort: 5678
              protocol: "TCP"
            - containerPort: 4536
              protocol: "TCP"
            - containerPort: 4546
              protocol: "TCP"
            - containerPort: 4511
              protocol: "TCP"
            - containerPort: 4517
              protocol: "TCP"
            - containerPort: 4532
              protocol: "TCP"
            - containerPort: 4548
              protocol: "TCP"
            - containerPort: 4520
              protocol: "TCP"
            - containerPort: 4534
              protocol: "TCP"
            - containerPort: 4547
              protocol: "TCP"
            - containerPort: 4538
              protocol: "TCP"
            - containerPort: 4543
              protocol: "TCP"
            - containerPort: 4554
              protocol: "TCP"
            - containerPort: 4556
              protocol: "TCP"
            - containerPort: 4519
              protocol: "TCP"
            - containerPort: 4523
              protocol: "TCP"
            - containerPort: 4529
              protocol: "TCP"
            - containerPort: 4540
              protocol: "TCP"
            - containerPort: 4566
              protocol: "TCP"
            - containerPort: 4522
              protocol: "TCP"
            - containerPort: 4533
              protocol: "TCP"
            - containerPort: 4535
              protocol: "TCP"
            - containerPort: 4525
              protocol: "TCP"
            - containerPort: 4527
              protocol: "TCP"
            - containerPort: 4544
              protocol: "TCP"
            - containerPort: 4545
              protocol: "TCP"
            - containerPort: 4555
              protocol: "TCP"
            - containerPort: 4513
              protocol: "TCP"
            - containerPort: 4514
              protocol: "TCP"
            - containerPort: 4521
              protocol: "TCP"
            - containerPort: 4558
              protocol: "TCP"
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  name: "localstack"
  namespace: "test-project"
spec:
  host: "s3-localstack-test-project.apps-crc.testing"
  port:
    targetPort: "4566-tcp"
  to:
    kind: "Service"
    name: "localstack"
    weight: 100
  wildcardPolicy: "None"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "localstack"
  namespace: "test-project"
spec:
  internalTrafficPolicy: "Cluster"
  ipFamilyPolicy: "SingleStack"
  ports:
    - name: "4510-tcp"
      port: 4510
      protocol: "TCP"
      targetPort: 4510
    - name: "4511-tcp"
      port: 4511
      protocol: "TCP"
      targetPort: 4511
    - name: "4512-tcp"
      port: 4512
      protocol: "TCP"
      targetPort: 4512
    - name: "4513-tcp"
      port: 4513
      protocol: "TCP"
      targetPort: 4513
    - name: "4514-tcp"
      port: 4514
      protocol: "TCP"
      targetPort: 4514
    - name: "4515-tcp"
      port: 4515
      protocol: "TCP"
      targetPort: 4515
    - name: "4516-tcp"
      port: 4516
      protocol: "TCP"
      targetPort: 4516
    - name: "4517-tcp"
      port: 4517
      protocol: "TCP"
      targetPort: 4517
    - name: "4518-tcp"
      port: 4518
      protocol: "TCP"
      targetPort: 4518
    - name: "4519-tcp"
      port: 4519
      protocol: "TCP"
      targetPort: 4519
    - name: "4520-tcp"
      port: 4520
      protocol: "TCP"
      targetPort: 4520
    - name: "4521-tcp"
      port: 4521
      protocol: "TCP"
      targetPort: 4521
    - name: "4522-tcp"
      port: 4522
      protocol: "TCP"
      targetPort: 4522
    - name: "4523-tcp"
      port: 4523
      protocol: "TCP"
      targetPort: 4523
    - name: "4524-tcp"
      port: 4524
      protocol: "TCP"
      targetPort: 4524
    - name: "4525-tcp"
      port: 4525
      protocol: "TCP"
      targetPort: 4525
    - name: "4526-tcp"
      port: 4526
      protocol: "TCP"
      targetPort: 4526
    - name: "4527-tcp"
      port: 4527
      protocol: "TCP"
      targetPort: 4527
    - name: "4528-tcp"
      port: 4528
      protocol: "TCP"
      targetPort: 4528
    - name: "4529-tcp"
      port: 4529
      protocol: "TCP"
      targetPort: 4529
    - name: "4530-tcp"
      port: 4530
      protocol: "TCP"
      targetPort: 4530
    - name: "4531-tcp"
      port: 4531
      protocol: "TCP"
      targetPort: 4531
    - name: "4532-tcp"
      port: 4532
      protocol: "TCP"
      targetPort: 4532
    - name: "4533-tcp"
      port: 4533
      protocol: "TCP"
      targetPort: 4533
    - name: "4534-tcp"
      port: 4534
      protocol: "TCP"
      targetPort: 4534
    - name: "4535-tcp"
      port: 4535
      protocol: "TCP"
      targetPort: 4535
    - name: "4536-tcp"
      port: 4536
      protocol: "TCP"
      targetPort: 4536
    - name: "4537-tcp"
      port: 4537
      protocol: "TCP"
      targetPort: 4537
    - name: "4538-tcp"
      port: 4538
      protocol: "TCP"
      targetPort: 4538
    - name: "4539-tcp"
      port: 4539
      protocol: "TCP"
      targetPort: 4539
    - name: "4540-tcp"
      port: 4540
      protocol: "TCP"
      targetPort: 4540
    - name: "4541-tcp"
      port: 4541
      protocol: "TCP"
      targetPort: 4541
    - name: "4542-tcp"
      port: 4542
      protocol: "TCP"
      targetPort: 4542
    - name: "4543-tcp"
      port: 4543
      protocol: "TCP"
      targetPort: 4543
    - name: "4544-tcp"
      port: 4544
      protocol: "TCP"
      targetPort: 4544
    - name: "4545-tcp"
      port: 4545
      protocol: "TCP"
      targetPort: 4545
    - name: "4546-tcp"
      port: 4546
      protocol: "TCP"
      targetPort: 4546
    - name: "4547-tcp"
      port: 4547
      protocol: "TCP"
      targetPort: 4547
    - name: "4548-tcp"
      port: 4548
      protocol: "TCP"
      targetPort: 4548
    - name: "4549-tcp"
      port: 4549
      protocol: "TCP"
      targetPort: 4549
    - name: "4550-tcp"
      port: 4550
      protocol: "TCP"
      targetPort: 4550
    - name: "4551-tcp"
      port: 4551
      protocol: "TCP"
      targetPort: 4551
    - name: "4552-tcp"
      port: 4552
      protocol: "TCP"
      targetPort: 4552
    - name: "4553-tcp"
      port: 4553
      protocol: "TCP"
      targetPort: 4553
    - name: "4554-tcp"
      port: 4554
      protocol: "TCP"
      targetPort: 4554
    - name: "4555-tcp"
      port: 4555
      protocol: "TCP"
      targetPort: 4555
    - name: "4556-tcp"
      port: 4556
      protocol: "TCP"
      targetPort: 4556
    - name: "4557-tcp"
      port: 4557
      protocol: "TCP"
      targetPort: 4557
    - name: "4558-tcp"
      port: 4558
      protocol: "TCP"
      targetPort: 4558
    - name: "4559-tcp"
      port: 4559
      protocol: "TCP"
      targetPort: 4559
    - name: "4566-tcp"
      port: 4566
      protocol: "TCP"
      targetPort: 4566
    - name: "5678-tcp"
      port: 5678
      protocol: "TCP"
      targetPort: 5678
  selector:
    deployment: "localstack"
  sessionAffinity: "None"
  type: "ClusterIP"
